--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>
-                        Opp. HP Petrol Pump, 13/1 RD, Near Hanuman Mandir, Faridabad, Haryana
+                        Opp. HP Petrol Pump, 13/1 RZ, Near Hanuman Mandir, Faridabad, Haryana
                     </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> +91 9643374660
                     </p>
