--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         </div>
                         <div class=" text-center p-4">
 
-                            <h5 class="fw-bold mb-0">Ciramic Tiles</h5>
+                            <h5 class="fw-bold mb-0">Ceramic Tiles</h5>
                             <a href="" class="btn btn-dark mt-3">Enquiry</a>
 
                         </div>
